--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,13 @@
 locale                   : "en"
 site_theme               : "default"
 title                    : "Yue's Place"
+title-fr                 : "Chez Yue"
 title_separator          : "-"
 name                     : &name "Yue Zhang"
 description              : &description "personal description"
 url                      : https://sdawzy.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
+# baseurl-fr               : "/fr"
 repository               : "sdawzy/academicpages.github.io"
 
 
@@ -75,6 +77,63 @@ author:
   xing             : # Username
   youtube          : # Username
   zhihu            : # Username
+
+# Personal information in French
+author-fr:
+  # Biographic information
+  avatar           : "profile.png"
+  name             : "Yue Zhang"
+  # pronouns         : "N'importe quel Pronom"  
+  # bio              : "Short biography for the left-hand sidebar"
+  location         : "Ottawa, Canada"
+  employer         : "Université d’Ottawa"
+  uri              : "https://sdawzy.github.io/"
+  email            : "yuezhang1437@gmail.com" 
+
+  # Academic websites
+  arxiv            : # URL - Update with the correct link to your profile
+  # googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  impactstory      : # URL
+  # orcid            : "http://orcid.org/yourorcidurl"
+  semantic         : # URL
+  # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : # URL
+  scopus           : # URL
+
+  # Repositories and software development
+  bitbucket        : # Username - Update with your username on the site
+  codepen          : # Username
+  dribbble         : # Username
+  github           : "sdawzy"
+  kaggle           : # Username  
+  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+
+  # Social media
+  bluesky          : "yuezhang.bsky.social" # Replace this with you Bluesky username
+  facebook         : # Username
+  flickr           : # Username
+  foursquare       : # Username
+  goodreads        : # Username
+  google_plus      : # Username
+  keybase          : # Username
+  instagram        : # Username
+  lastfm           : # Username
+  linkedin         : # Username
+  mastodon         : # URL
+  medium           : # URL
+  pinterest        : # Username
+  soundcloud       : # Username
+  steam            : # Username
+  telegram         : # URL
+  tumblr           : # Username
+  twitter          : # Username for X / Twitter
+  vine             : # Username
+  weibo            : # Username
+  wikipedia        : # Username
+  xing             : # Username
+  youtube          : # Username
+  zhihu            : # Username
+
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
